--- a/src/resizable-card-layout.scss
+++ b/src/resizable-card-layout.scss
@@ -9,25 +9,29 @@ $block: #{$fd-namespace}-resizable-card-layout;
   $fd-resize-handle-width: 0.0625rem;
   $fd-resize-icon-padding: 0.0625rem;
   $fd-border-on-drag: 0.125rem dashed var(--sapContent_DragAndDropActiveColor);
+  $fd-layout-top-margin: 1rem;
+  $fd-layout-default-margin: 0.5rem;
 
   // reduced by 0.5rem as card already have 0.5rem padding
   $fd-resizable-card-padding-x: (
-    sm: 0,
-    md: 0.5rem,
-    lg: 2.5rem,
+    sm: 0.5rem,
+    md: 1rem,
+    lg: 1rem,
+    xl: 3rem
   );
 
   @include fd-reset();
 
-  padding-left: 0.5rem;
-  padding-right: 0.5rem;
+  padding-left: $fd-layout-default-margin;
+  padding-right: $fd-layout-default-margin;
+  margin-top: $fd-layout-top-margin;
+  position: relative;
 
   &__item {
     @include fd-reset();
     @include fd-flex();
 
     min-width: $fd-resizable-card-min-width;
-    margin: 0.5rem;
     position: relative;
   }
 
@@ -71,6 +75,7 @@ $block: #{$fd-namespace}-resizable-card-layout;
     bottom: 0;
     right: $fd-resize-icon-padding;
     color: var(--sapButton_IconColor);
+    z-index: 2;
 
     @include fd-rtl() {
       transform: rotate(90deg);
@@ -100,6 +105,7 @@ $block: #{$fd-namespace}-resizable-card-layout;
   &__resize {
     &--vertical {
       order: 2;
+      z-index: 2;
       // subtract resize-corner icon font-size/2
       width: $fd-resize-handle-width;
       cursor: ew-resize;
@@ -112,6 +118,7 @@ $block: #{$fd-namespace}-resizable-card-layout;
 
     &--horizontal {
       // subtract resize-corner icon font-size/2
+      z-index: 2;
       width: calc(100% - 0.5rem);
       height: $fd-resize-handle-width;
       position: absolute;
